--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="net.simplifiedcoding.firebaseauthdemo.ProfileActivity">
+    tools:context="com.pelicanus.insight.ProfileActivity">
 
 
     <LinearLayout
@@ -31,6 +31,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="Logout" />
+            android:text="@string/logout" />
     </LinearLayout>
 </RelativeLayout>
