--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -54,7 +54,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:text="@string/not_have_an_account_signup_here"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textAllCaps="false" />
 
     </LinearLayout>
 
