--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -43,6 +43,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="13dp"
                 android:layout_toEndOf="@+id/buttonLogout"
+                android:onClick="myFunc"
                 android:text="@string/settings" />
         </RelativeLayout>
 
