Update versions of SDK

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,6 +57,12 @@
             android:textAlignment="center"
             android:textAllCaps="false" />
 
+        <RadioButton
+            android:id="@+id/radioButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/radiobutton" />
+
     </LinearLayout>
 
 </RelativeLayout>
