--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,13 +69,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.pelicanus.insight.LoginActivity"
-    android:background = "@color/colorPrimary">
+    android:background = "@drawable/background_login"
+    android:theme="@style/AppTheme.NoActionBar">
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="190dp"
-        android:paddingTop="15dp"
+        android:paddingTop="30dp"
         android:visibility="visible"
         app:srcCompat="@drawable/logo_white_interface" />
 
@@ -95,41 +96,53 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="25dp"
-                android:text="Sign Up"
+                android:text="@string/signin"
                 android:textAlignment="center"
                 android:textAllCaps="true"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/editTextPassword"
-                android:layout_marginTop="35dp"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:ems="10"
-                android:inputType="textPassword"
-                android:textSize="15sp"
-                android:hint="E-mail"/>
-
-            <EditText
                 android:id="@+id/editTextEmail"
+                android:layout_marginTop="20dp"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:ems="10"
                 android:inputType="textEmailAddress"
-                android:textSize="15sp"
-                android:hint="Password"
+                android:textSize="14sp"
+                android:hint="@string/email"
+                android:drawableLeft="@drawable/ic_perm_identity_black_36dp"
+                android:drawablePadding="7dp"/>
+
+            <EditText
+                android:id="@+id/editTextPassword"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:ems="10"
+                android:inputType="textPassword"
+                android:textSize="14sp"
+                android:hint="@string/password"
+                android:drawableLeft="@drawable/ic_lock_outline_black_36dp"
+                android:drawablePadding="7dp"
                 />
 
             <Button
-                android:id="@+id/buttonSignup"
+                android:id="@+id/buttonSignin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
-                android:text="Sign up"/>
+                android:text="@string/signin"/>
+
+            <TextView
+                android:id="@+id/textViewSignup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:text="@string/not_have_an_account_signup_here"
+                android:textAlignment="center" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
