--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,9 +62,11 @@
 </RelativeLayout>-->
 
 <ScrollView
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@drawable/background_login">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -72,7 +74,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context="com.pelicanus.insight.LoginActivity"
-    android:background = "@drawable/background_login"
     android:theme="@style/AppTheme.NoActionBar">
 
     <ImageView
@@ -107,29 +108,28 @@
 
             <EditText
                 android:id="@+id/editTextEmail"
-                android:layout_marginTop="20dp"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:ems="10"
-                android:inputType="textEmailAddress"
-                android:textSize="14sp"
-                android:hint="@string/email"
+                android:layout_marginTop="20dp"
+                android:drawablePadding="7dp"
                 android:drawableStart="@drawable/ic_perm_identity_black_36dp"
-                android:drawablePadding="7dp"/>
+                android:ems="10"
+                android:hint="@string/email"
+                android:inputType="textEmailAddress"
+                android:textSize="14sp" />
 
             <EditText
                 android:id="@+id/editTextPassword"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:ems="10"
-                android:inputType="textPassword"
-                android:textSize="14sp"
-                android:hint="@string/password"
-                android:drawableStart="@drawable/ic_lock_outline_black_36dp"
                 android:drawablePadding="7dp"
-                />
+                android:drawableStart="@drawable/ic_lock_outline_black_36dp"
+                android:ems="10"
+                android:hint="@string/password"
+                android:inputType="textPassword"
+                android:textSize="14sp" />
 
             <Button
                 android:id="@+id/buttonSignin"
@@ -137,7 +137,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
-                android:text="@string/signin"/>
+                android:text="@string/signin" />
 
             <TextView
                 android:id="@+id/textViewSignup"
@@ -146,6 +146,39 @@
                 android:layout_margin="15dp"
                 android:text="@string/not_have_an_account_signup_here"
                 android:textAlignment="center" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center_horizontal"
+                android:paddingBottom="20dp"
+                android:paddingTop="10dp">
+
+                <Button
+                    android:id="@+id/buttonGoogle"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/google_login_logo"
+                    />
+
+                <Button
+                    android:id="@+id/buttonFacebook"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:background="@drawable/facebook_login_logo"
+                    />
+
+                <Button
+                    android:id="@+id/buttonTwitter"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/twitter_login_logo"
+                    />
+
+            </LinearLayout>
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
