--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#104ba8</color>
     <color name="colorPrimaryDark">#002056</color>
     <color name="white">#fff</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#6616ad</color>
 </resources>
