--- a/app/src/main/res/layout/activity_email_pass_reg.xml
+++ b/app/src/main/res/layout/activity_email_pass_reg.xml
@@ -37,7 +37,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="25dp"
-                    android:text="@string/signin"
+                    android:text="EmailPassReg"
                     android:textAlignment="center"
                     android:textAllCaps="true"
                     android:textSize="20sp"
