--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_login">
@@ -68,12 +69,16 @@
                     android:inputType="textPassword"
                     android:textSize="14sp" />
 
+
                 <Button
                     android:id="@+id/buttonSignin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="20dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:onClick="SignInFirebaseLoginPass"
                     android:text="@string/signin" />
 
                 <TextView
@@ -81,6 +86,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:onClick="OpenEmailPassRegActivity"
                     android:text="@string/not_have_an_account_signup_here"
                     android:textAlignment="center" />
 
