Added Main Menu Activity. Added fixed drawer to main menu. Added several translations

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -23,5 +23,10 @@
         android:layout_gravity="start"
         app:menu="@menu/drawer_menu" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="XUI"/>
+
 
 </android.support.v4.widget.DrawerLayout>
