Слил бэк и фронт С виртуального телефона работает С реального не получается зайти в создание экскурсии

--- a/app/src/main/res/layout/activity_create_trip.xml
+++ b/app/src/main/res/layout/activity_create_trip.xml
@@ -149,6 +149,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="15dp"
+            android:onClick="onCreate()"
             android:text="@string/trip_create" />
 
     </LinearLayout>
