Добавлена функция Load - загружает картинку с сервера Функция Set в стадии заглушки

--- a/app/src/main/res/layout/activity_create_trip.xml
+++ b/app/src/main/res/layout/activity_create_trip.xml
@@ -40,6 +40,7 @@
             android:background="@color/white"
             android:drawablePadding="5dp"
 
+            android:onClick="setTrip_avatar"
             android:text="Edit picture"
             android:textAllCaps="false"
             android:textColor="@android:color/darker_gray" />
