При тыкании на кнопку "сменить аватарку" загрудается далек для удобства тестирования

--- a/app/src/main/res/layout/activity_create_trip.xml
+++ b/app/src/main/res/layout/activity_create_trip.xml
@@ -27,8 +27,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="60dp"
-                android:foregroundGravity="center"
-                android:src="@drawable/excursion_zaglushka" />
+                android:foregroundGravity="center" />
 
         </RelativeLayout>
 
