Minor design changes and bug fixes

--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -13,44 +13,53 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         tools:context="com.pelicanus.insight.ProfileActivity"
-        android:orientation="vertical"
-        android:background="@drawable/background_login">
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <ImageView
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="30dp"
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/user_photo"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:contentDescription="@string/user_photo"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@mipmap/ic_launcher"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="30dp"
+                app:civ_border_width="2dp"
+                app:civ_border_color="@color/white"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="5dp"
                 android:text="John Snow"
-                android:textSize="30sp"
-                android:textStyle="bold"
+                android:textSize="20sp"
                 android:textColor="@color/white"/>
+
         </LinearLayout>
+
         <android.support.v7.widget.CardView
-            android:layout_margin="15dp"
+            android:layout_margin="20dp"
             android:layout_width="match_parent"
             android:layout_height="100dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:weightSum="3">
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -58,6 +67,7 @@
                         android:text="@string/participate_in"
                         android:textSize="15sp"
                         />
+
                     <TextView
                         android:layout_gravity="center_horizontal"
                         android:layout_width="wrap_content"
@@ -65,19 +75,29 @@
                         android:text="7"
                         android:textSize="19sp"
                         />
+
                 </LinearLayout>
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/darker_gray"
+                    android:layout_marginVertical="15dp"/>
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:text="@string/organize"
                         android:textSize="15sp"/>
+
                     <TextView
                         android:layout_gravity="center_horizontal"
                         android:layout_width="wrap_content"
@@ -85,13 +105,22 @@
                         android:text="0"
                         android:textSize="19sp"
                         />
+
                 </LinearLayout>
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/darker_gray"
+                    android:layout_marginVertical="15dp"/>
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:orientation="vertical">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -99,6 +128,7 @@
                         android:text="@string/rating"
                         android:textSize="15sp"
                         />
+
                     <TextView
                         android:layout_gravity="center_horizontal"
                         android:layout_width="wrap_content"
@@ -106,72 +136,91 @@
                         android:text="3.9/5.0"
                         android:textSize="19sp"
                         />
+
                 </LinearLayout>
+
             </LinearLayout>
+
         </android.support.v7.widget.CardView>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginTop="10dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_gravity="center_horizontal">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="My last excurcions"
+                    android:text="Latest excursions"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     android:gravity="center_horizontal"
                     android:textColor="@color/white"/>
+
             </LinearLayout>
+
             <LinearLayout
-                android:layout_margin="15dp"
+                android:layout_margin="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/white"
                 android:orientation="vertical"
                 android:layout_gravity="center_horizontal">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
+
                     <ImageView
                         android:layout_margin="10dp"
                         android:layout_width="70dp"
                         android:layout_height="70dp"
                         android:contentDescription="@string/user_photo"
                         android:src="@mipmap/ic_launcher" />
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:orientation="vertical">
+
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="15dp"
                                 android:text="Motor!"
                                 android:textSize="15sp"/>
+
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="15dp"
                                 android:text="MehMat stud vesna"
                                 android:textSize="15sp"/>
+
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="15dp"
                                 android:text="22.03.2017"
                                 android:textSize="15sp"/>
+
                         </LinearLayout>
+
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
+
                     <ImageView
                         android:layout_margin="10dp"
                         android:layout_width="70dp"
