Minor bug fixes. Added "meeting point" field to create trip

--- a/app/src/main/res/layout/activity_create_trip.xml
+++ b/app/src/main/res/layout/activity_create_trip.xml
@@ -28,7 +28,7 @@
                 android:layout_height="228dp"
                 android:layout_marginTop="60dp"
                 android:layout_marginHorizontal="20dp"
-                android:foregroundGravity="center"
+                android:foregroundGravity="center_horizontal"
                 android:scaleType="centerCrop"
                 android:src="@drawable/excursion_zaglushka" />
 
@@ -40,13 +40,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@color/white"
-            android:drawablePadding="5dp"
-
             android:onClick="setTrip_avatar"
-            android:text="Edit picture"
+            android:layout_margin="8dp"
+            android:text="@string/edit_picture"
             android:textAllCaps="false"
             android:textColor="@android:color/darker_gray" />
-        <!--android:drawableStart="@drawable/ic_edit_black_24dp"-->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -59,8 +57,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
-                android:text="Name"
-                android:textAllCaps="true" />
+                android:text="@string/name"
+                android:textAllCaps="true"
+                android:textSize="12sp"/>
             <EditText
                 android:id="@+id/text_nametrip"
                 android:layout_width="match_parent"
@@ -82,8 +81,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
-                android:text="Description"
-                android:textAllCaps="true" />
+                android:text="@string/description"
+                android:textAllCaps="true"
+                android:textSize="12sp"/>
+
             <EditText
                 android:id="@+id/text_description"
                 android:layout_width="match_parent"
@@ -106,8 +107,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
-                android:text="Date"
-                android:textAllCaps="true" />
+                android:text="@string/date"
+                android:textAllCaps="true"
+                android:textSize="12sp"/>
 
             <DatePicker
                 android:layout_width="match_parent"
@@ -131,8 +133,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
-                android:text="Language"
-                android:textAllCaps="true" />
+                android:text="@string/language"
+                android:textAllCaps="true"
+                android:textSize="12sp"/>
 
             <Spinner
                 android:id="@+id/select_language"
@@ -141,6 +144,32 @@
                 android:layout_weight="1"
                 android:background="@android:drawable/btn_dropdown"
                 android:spinnerMode="dropdown" />
+
+        </LinearLayout>
+        
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="15dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:text="Meeting point"
+                android:textAllCaps="true"
+                android:textSize="12sp"/>
+
+            <EditText
+                android:id="@+id/text_location"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="Trip Location"
+                android:inputType="textCapSentences|textMultiLine" />
 
         </LinearLayout>
 
