--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,47 +87,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
+                    android:layout_marginBottom="15dp"
                     android:clickable="true"
                     android:focusable="true"
                     android:onClick="OpenEmailPassRegActivity"
                     android:text="@string/not_have_an_account_signup_here"
                     android:textAlignment="center" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="To main menu"
-                    android:onClick="OpenMenuMain"/>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:orientation="horizontal"
-                    android:paddingBottom="20dp"
-                    android:paddingTop="10dp">
-
-                    <Button
-                        android:id="@+id/buttonGoogle"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:background="@drawable/google_login_logo" />
-
-                    <Button
-                        android:id="@+id/buttonFacebook"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
-                        android:background="@drawable/facebook_login_logo" />
-
-                    <Button
-                        android:id="@+id/buttonTwitter"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:background="@drawable/twitter_login_logo" />
-
-                </LinearLayout>
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
