--- a/app/src/main/res/layout/activity_excursion_view.xml
+++ b/app/src/main/res/layout/activity_excursion_view.xml
@@ -13,6 +13,7 @@
         android:orientation="vertical">
         
         <ImageView
+            android:id="@+id/view_trip_image"
             android:layout_width="400dp"
             android:layout_height="228dp"
             android:layout_gravity="center_horizontal"
