--- a/app/src/main/res/layout/activity_email_pass_reg.xml
+++ b/app/src/main/res/layout/activity_email_pass_reg.xml
@@ -89,7 +89,7 @@
                     android:drawablePadding="7dp"
                     android:drawableStart="@drawable/ic_lock_outline_black_36dp"
                     android:ems="10"
-                    android:hint="Repeat password"
+                    android:hint="@string/repeat_password"
                     android:inputType="textPassword"
                     android:textSize="14sp" />
 
