Переделан вывод экскурсии с помощью RecycleView.Картинки не работают

--- a/app/src/main/res/layout/activity_trip_list.xml
+++ b/app/src/main/res/layout/activity_trip_list.xml
@@ -8,12 +8,10 @@
     android:background="@drawable/background_login"
     android:orientation="vertical">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/trip_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:background="@color/white"
-        android:padding="5dp" />
+        android:clickable="true"
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
