Аватарка в шторке работает как кнопка. Но она потеряла округость.

--- a/app/src/main/res/layout/nav_header_menu_main.xml
+++ b/app/src/main/res/layout/nav_header_menu_main.xml
@@ -12,14 +12,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <ImageButton
         android:id="@+id/user_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="TODO"
+        android:onClick="OpenProfile"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/navdr_username_label"
