Отписка от экскурсии

--- a/app/src/main/res/layout/activity_excursion_view.xml
+++ b/app/src/main/res/layout/activity_excursion_view.xml
@@ -154,7 +154,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="10dp"
-            android:text="I'm in" />
+            android:text="@string/exview_btn_im_in" />
         
     </LinearLayout>
 
