--- a/app/src/main/res/menu/activity_menu_main_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_main_drawer.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">
+    <group android:id="@+id/nav_menu_main">
         <item
             android:id="@+id/nav_myexc"
             android:icon="@drawable/ic_date_range_black_48dp"
@@ -19,8 +19,7 @@
             android:title="@string/darawer_create_excursion" />
     </group>
 
-    <item android:title="@string/service">
-        <menu>
+    <group android:id="@+id/nav_menu_serv">
             <item
                 android:id="@+id/nav_settings"
                 android:icon="@drawable/ic_menu_manage"
@@ -37,7 +36,6 @@
                 android:id="@+id/nav_logout"
                 android:icon="@drawable/ic_exit_to_app_black_48dp"
                 android:title="@string/drawer_log_out" />
-        </menu>
-    </item>
+    </group>
 
 </menu>
